# C-ending-homework

gameeee/: CMakeLists.txt  config.h  enemyplane.cpp  game.cpp  game.h  gameover.cpp  gameover.h  hp.cpp  hp.h  main.cpp  mainscene.cpp  mainscene.h  mainscene.ui  res.qrc  socre.cpp  socre.h
zy/: CMakeLists.txt  bomb.cpp  bomb.h  bullet.cpp  bullet.h  easy.cpp  easy.h  easy.ui  enemyplane1.cpp  enemyplane1.h  enemyplane2.cpp  enemyplane2.h  main.cpp  mw.cpp  mw.h  mw.ui  plane.cpp  plane.h
